--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+/*html {
+  width: 100%;
+  background-color: white;
+  box-sizing: border-box;
+}*/
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
